# pizza-ordering-service

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
charts/pizza-ordering-service/: Chart.yaml  values.yaml
charts/pizza-ordering-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
docs/: architecture.md  final-report.md  slides-outline.md
k8s/: argocd-application.yaml  configmap.yaml  deployment.yaml  scaledobject.yaml  secret.yaml  service.yaml
monitoring/: grafana-dashboard.json  otel-collector-config.yaml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
perf/: load-test.js  locustfile.py  report.md
postman/: collection.json
scripts/: generate_project_assets.py
src/: main.py
src/api/: routes.py
src/db/: init_db.py  session.py
src/integrations/: order_archive.py  tracing.py
src/models/: __init__.py  menu_item.py  order.py  order_item.py
src/schemas/: config.py  menu.py  order.py
src/services/: orders.py  pricing.py
tests/: conftest.py  factories.py
tests/e2e/: test_ui_flow.py
tests/integration/: conftest.py  test_orders_postgres.py
tests/unit/: test_health.py  test_order_archive.py  test_orders_api.py  test_web_ui.py
