[project]
name = "pizza-ordering-service"
version = "0.1.0"
description = "Pizza ordering service for cloud testing engineering term project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "boto3>=1.39.0,<2.0.0",
  "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "httpx>=0.28.1,<1.0.0",
  "factory-boy>=3.3.3,<4.0.0",
  "faker>=37.4.0,<38.0.0",
  "testcontainers[postgres]>=4.12.0,<5.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
